<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Road Rescue Fyp</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="sign_to_your_account">Sign Up to your account</string>
    <string name="email_add">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password"><u><b>Forget Password?</b></u></string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? <u><b>Register</b></u></string>
    <string name="have_an_account_sign_up">Have an account? <u><b>Login</b></u></string>
    <string name="error_field_required">Please fill the field</string>
    <string name="error_invalid_password">Password may contain 6 or more characters.</string>
    <string name="prompt_email">Enter an email</string>
    <string name="error_invalid_email">Email address is invalid (Try like:abc@example.com)</string>
    <string name="emailPattern" tools:ignore="TypographyDashes">[a–z0–9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="phone_number">Phone Number</string>
    <string name="cnic_without_dashes">CNIC without dashes(-)</string>
    <string name="reset_password">Reset Password</string>
    <string name="back_to_login"><u><b>Back to Login</b></u></string>
    <string name="enter_email_to_reset">Enter email to reset your password</string>
    <string name="home">Home</string>
    <string name="my_complaints">My Complaints</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_road_rescue_app">Welcome to Road Rescue App</string>
    <string name="complaint_system">Complaint System</string>
    <string name="add_emergency_contact">Add Emergency Contact</string>
    <string name="national_emergency">National Emergency</string>
    <string name="settings">Settings</string>
    <string name="enter_a_new_password_for_the_road_rescue_app">Enter a new password for the road rescue app</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="write_your_complaint_here">Write your Complaint here</string>
    <string name="write_complaint_detail">Write Complaint Detail</string>
    <string name="add_image_instead">Take Photo</string>
    <string name="send">Send</string>
    <string name="complaint_type">Type: </string>
    <string name="city">City: </string>
    <string name="no_complaint_s_found">No Complaint(s) Found</string>
    <string name="no_emergency_contact_found">No Emergency Contact Found</string>
    <string name="save">SAVE</string>
    <string name="cancel">Cancel</string>
    <string name="contact_name">Contact Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="number">Number: </string>
    <string name="name1">Name: </string>
    <string name="ok">OK</string>
    <string name="enable_perm">You need to enable these permissions.</string>
    <string name="choose_one_of_the_following_contacts_as_your_emergency_contact">Choose one of the following contacts as your emergency contact</string>
    <string name="done">Done</string>
    <string name="keyword">Search by Name</string>
    <string name="no_contact_found">No Contact found</string>
    <string name="enable_shake">Enable Shake</string>
    <string name="help_me">Help Me!</string>
    <string name="enable_national_emergency_call">Enable national emergency call</string>
    <string name="call">Call</string>
    <string name="enable_help_me_to_send_sms_to_all_emergency_contacts">Enable help me to send SMS to all emergency contacts</string>
    <string name="delete">Delete</string>
    <string-array name="complaint_array">
        <item>Complaint Type</item>
        <item>Traffic Jam</item>
        <item>Complaint against Wardens</item>
        <item>Illegal Parking</item>
        <item>Again Highway Wardens</item>
        <item>Others</item>
    </string-array>
    <string-array name="city_array">
        <item>Select City</item>
        <item>Karachi</item>
        <item>Lahore</item>
        <item>Faisalabad</item>
        <item>Rawalpindi</item>
        <item>Gujranwala</item>
        <item>Peshawar</item>
        <item>Multan</item>
        <item>Hyderabad</item>
        <item>Islamabad</item>
        <item>Quetta</item>
    </string-array>

</resources>
