<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_complaint"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/my_complaints" />
        <item
            android:id="@+id/nav_pass"
            android:icon="@drawable/ic_lock_black_24dp"
            android:title="@string/change_password" />
    </group>
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_arrow_forward_black_24dp"
        android:title="@string/logout" />
</menu>