<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/add_emergency_contact"
                android:textColor="@color/colorText"
                android:textSize="9pt" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="DisableBaselineAlignment">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <androidx.cardview.widget.CardView
                        android:layout_width="250dp"
                        android:layout_height="55dp"
                        android:layout_margin="5dp"
                        app:cardCornerRadius="6dp"
                        app:cardElevation="1dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/cName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/contact_name"
                            android:inputType="text|textPersonName"
                            android:textColor="@color/colorText"
                            android:textColorHint="@color/colorText" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="1dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cContact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/contact_number"
                        android:inputType="phone"
                        android:textColor="@color/colorText"
                        android:textColorHint="@color/colorText" />

                </androidx.cardview.widget.CardView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_10sdp"
                android:layout_weight="2"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_cancel"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_save"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@string/save" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>