<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clickBtn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"
    android:clickable="true"
    android:focusable="true"
    android:padding="@dimen/_5sdp"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="@dimen/_10sdp"
    app:cardElevation="@dimen/_5sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp">

        <RelativeLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/name1"
                android:textColor="@color/colorText"
                android:textSize="@dimen/_14ssp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/complaintType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_toEndOf="@id/title"
                android:text="@string/name1"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_12ssp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout1"
            android:layout_marginTop="@dimen/_2sdp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/selectCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignParentStart="true"
                android:text="@string/number"
                android:textColor="@color/colorText"
                android:textSize="@dimen/_14ssp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/_2sdp"
                android:layout_toEndOf="@id/selectCity"
                android:text="@string/complaint_type"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_12ssp" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/call"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_below="@+id/layout"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/_5sdp"
            android:clickable="true"
            android:contentDescription="@string/add_emergency_contact"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_call_black_24dp"
            tools:ignore="UnusedAttribute"
            tools:targetApi="m" />
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>