<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.ChangePasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/enter_a_new_password_for_the_road_rescue_app"
            android:textColor="@color/colorText"
            android:textSize="@dimen/_14ssp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColorHint="@color/colorText"
            app:boxBackgroundColor="@android:color/white"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/enter_new_password"
                android:hint="@string/enter_new_password"
                android:inputType="textPassword"
                android:textColor="@color/colorText"
                android:textSize="@dimen/_14ssp"
                tools:targetApi="o" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cpasswordinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColorHint="@color/colorText"
            app:boxBackgroundColor="@android:color/white"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/confirm_new_password"
                android:hint="@string/confirm_new_password"
                android:inputType="textPassword"
                android:textColor="@color/colorText"
                android:textSize="@dimen/_14ssp"
                tools:targetApi="o" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/resetPass"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:backgroundTint="@color/colorPrimary"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/reset_password" />
    </LinearLayout>
</LinearLayout>